<resources>
    <string name="app_name">Swoosh</string>
    <string name="find_a_team_in_your_city_dominate_the_leauge"><![CDATA[Find a team in your city & dominate the leauge]]></string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="get_started">GET STARTED</string>
    <string name="background_photo_of_the_layout">background photo of the layout</string>
    <string name="swoosh_logo">swoosh logo</string>
</resources>